welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: ';' expected but '(' found.
def dessine (Color:c) {setCouleurBrosse(c:Color);baisseBrosse():leveBrosse()}
                                                                          ^