welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def dessine (Color:c) {setCouleurBrosse(c:Color);baisseBrosse():leveBrosse()}

def motif () {avance();dessine();droite;avance;droite();avance();dessine();droite();avance();droite;
             avance();avance();dessine();avance();gauche();avance();dessine();gauche;avance();avance();avance();avance();droite();avance();dessine();droite();avance();gauche();avance();dessine();droite();avance();dessine();;avance;droite;dessine();avance();avance();avance();droite();avance();avance();avance();retourne()}


override def run() {
}